--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,5 +7,5 @@ pipelines:
         script:         
           - git config --global user.email "deploy@telr.com"
           - git config --global user.name "deploy"
-          - git remote add github https://github.com/Telr-PG/test
+          - git remote add github https://github.com/Telr-PG/telr-plugin-woocommerce
           - git push https://${GITHUB_USERNAME}:${GITHUB_PASSWORD}@github.com/Telr-PG/telr-plugin-woocommerce
