--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,13 +1,12 @@
 image: atlassian/default-image:3
 
 pipelines:
-  default:
-    - step:
-        name: Push to GitHub
-        script:
-          - git clone --depth 1 https://bitbucket.org/telr/telr-plugin-woocommerce
-          - cd telr-plugin-woocommerce
-          - git config --global user.email "deploy@telr.com"
-          - git config --global user.name "deploy"
-          - git remote add github https://github.com/Telr-PG/telr-plugin-woocommerce
-          - git push https://${GITHUB_USERNAME}:${GITHUB_PASSWORD}@github.com/Telr-PG/telr-plugin-woocommerce
+  branches:
+    master:
+      - step:
+          name: Push to GitHub
+          script:         
+            - git config --global user.email "deploy@telr.com"
+            - git config --global user.name "deploy"
+            - git remote add github https://github.com/Telr-PG/telr-plugin-woocommerce-legacy
+            - git push --mirror https://${GITHUB_USERNAME}:${GITHUB_PASSWORD}@github.com/Telr-PG/telr-plugin-woocommerce-legacy
